results divided into graph and print, run_ours.sh works.